# distillembed

./: .gitignore  CHANGELOG.md  DESIGN.md  HOWTO.md  QUICKSTART.md  README.md  TODO.md  pyproject.toml
cpp/: Makefile  compile_flags.txt
cpp/include/distillembed/: io.hpp  model.hpp  quant.hpp  search.hpp  tokenizer.hpp
cpp/src/: demb_selftest.cpp  demo_embed.cpp  demo_search.cpp
examples/device-docs/: corpus.txt  docs.txt  gen_corpus.py
scripts/: prepare_corpus.py
src/distillembed/: __init__.py  cli.py  distill.py  evaluate.py  export.py  model.py  quantize.py  refine.py  tokenizer.py
tests/: conftest.py  test_format.py  test_noheap.py  test_parity.py  test_search.py
tools/: run_doctests.py
